# celery-flower-mcp

./: .env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.test.yml  pyproject.toml  smithery.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
source/: client.py  main.py  providers.py  settings.py
source/tools/: queues.py  tasks.py  workers.py
tests/: conftest.py  test_client.py  test_main.py  test_providers.py  test_settings.py  test_tools_queues.py  test_tools_tasks.py  test_tools_workers.py
tests/integration/: Dockerfile.flower  Dockerfile.worker  celery_app.py  conftest.py  test_queues.py  test_tasks.py  test_workers.py
